Fix sidebar slim icon alignment

--- a/client/src/components/Sidebar/modules/MainMenu.scss
+++ b/client/src/components/Sidebar/modules/MainMenu.scss
@@ -46,7 +46,7 @@
 
     @at-root .sidebar--slim #{&} {
         > ul > li > a {
-            padding: 0.8em 0.8em;
+            padding: 0.8em 0.8em 0.8em 1.25em;
 
             .menuitem-label {
                 opacity: 0;
